--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Lato';
 }
 
-/* from Bulma */
+/* from Bulma - another CSS framework*/
 .icon {
     align-items: center;
     display: inline-flex;
@@ -54,6 +54,10 @@ body {
 
 .border-black {
     border: 1px solid black !important;
+}
+
+.bg-black {
+    background: #000 !important;
 }
 
 /* -------------------------------- Media Queries */
